# trading-strategies

./: .gitignore  CHANGELOG.md  LICENSE  README.md  paper_state_v2.json  paper_trades_v2.db  pyproject.toml
config/: __init__.py  constants.py  parameters.py  symbols.py
core/: __init__.py  data.py  engine.py  indicators.py  reporting.py  sessions.py  statistics.py
data/: download_candles.py  download_sentiment.py  schema.sql
docs/: data_dictionary.md  methodology.md
docs/results/: 00_executive_summary.md  01_session_correlation.md  02_v1_grid_search.md  03_alternative_strategies.md  04_sentiment_onchain.md  05_depth_microstructure.md  06_technical_indicators.md  07_advanced_strategies.md  08_multiyear_validation.md  09_quant_invalidated.md  10_sharp_research.md  11_channels_alpha.md  12_drawdown_reduction.md  13_dual_thrust_final.md  14_final_rankings.md
docs/strategies/: asia_breakout.md  dual_thrust.md  pairs_trading.md  scale_in_rsi2.md
live/: cron_multi.sh  cron_setup.sh  paper_api.py  paper_main.py  paper_portfolio.py  paper_strategies.py  paper_trader.py
research/: README.md  phase_13_dual_thrust_cusum.py  phase_14_portfolio.py
strategies/: __init__.py  base.py  mean_reversion.py  microstructure.py  quantitative.py  session_breakout.py  smart_money.py  trend_following.py
tests/: test_engine.py  test_indicators.py
